Completed URL Shortener Microservice

--- a/views/index.html
+++ b/views/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 
 <html>
-   <head>
-      <title>Elvin Bashirli's Portfolio</title>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
-   </head>
+  <head>
+    <title>Elvin Bashirli's Portfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-   <body>
+  <body>
     <h2>Elvin Bashirli's Portfolio App</h2>
 
     <ul>
       <li><a href="/timestamp">Timestamp Microservice</a></li>
       <li><a href="/header-parser">Request Header Parser</a></li>
-
+      <li><a href="/url-shortener">URL Shortener</a></li>
     </ul>
   </body>
 </html>
