--- a/views/headerparser.html
+++ b/views/headerparser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Request Header Parser</title>
+      <title>Request Header Parser | Elvin Bashirli</title>
       <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
       <link href="style.css" rel="stylesheet" type="text/css">
@@ -23,7 +23,7 @@
       </div>
       <div class="footer">
         <p>
-          by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
+          By <a href="https://www.freecodecamp.org/ebashirli">Elvin Bashirli</a>
         </p>
       </div>
    </body>
