Exercise tracker new user

--- a/views/index.html
+++ b/views/index.html
@@ -18,6 +18,7 @@
       <li><a href="/timestamp">Timestamp Microservice</a></li>
       <li><a href="/header-parser">Request Header Parser</a></li>
       <li><a href="/url-shortener">URL Shortener</a></li>
+      <li><a href="/exercise-tracker">Exercise Tracker</a></li>
     </ul>
   </body>
 </html>
