--- a/views/index.html
+++ b/views/index.html
@@ -19,6 +19,7 @@
       <li><a href="/header-parser">Request Header Parser</a></li>
       <li><a href="/url-shortener">URL Shortener</a></li>
       <li><a href="/exercise-tracker">Exercise Tracker</a></li>
+      <li><a href="/file-metadata">File Metadata</a></li>
     </ul>
   </body>
 </html>
