Revert "Just trying again"
This reverts commit b97091e9c57d6fdab178262e4818ed7dd39e13f6.

--- a/views/file-metadata.html
+++ b/views/file-metadata.html
@@ -5,7 +5,7 @@
     <title>File Metadata</title>
     <link
       rel="shortcut icon"
-      href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico"
+      href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png"
       type="image/x-icon"
     />
     <link
@@ -13,20 +13,12 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="/public/style.css" rel="stylesheet" type="text/css" />
+    <link href="style-file-metadata.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <div class="container">
       <h2>API Project: File Metadata Microservice</h2>
-      <h3>User Stories:</h3>
-      <ol>
-        <li>I can submit a form object that includes a file upload.</li>
-        <li>
-          When I submit something, I will receive the file name, and size in
-          bytes within the JSON response.
-        </li>
-      </ol>
 
       <h3>Usage:</h3>
       <p>Please Upload a File ...</p>
@@ -43,7 +35,9 @@
       </div>
     </div>
     <div class="footer">
-      <p>Elvin Bashirli © 2021</p>
+      <p>
+        By <a href="http://www.freecodecamp.com/ebashirli">Elvin Bashirli</a>
+      </p>
     </div>
   </body>
 </html>
