Made Randome Quote Machine and some other changes

--- a/views/index.html
+++ b/views/index.html
@@ -13,13 +13,41 @@
 
   <body>
     <h2>Elvin Bashirli's Portfolio App</h2>
-
+    <br />
+    <h3>Responsive Web Design</h3>
+    <ul>
+      <li><a href="/tribute-page">Tribute Page</a></li>
+      <li><a href="/survey-form">Survey Form</a></li>
+      <li><a href="/product-landing-page">Product Landing Page</a></li>
+      <li><a href="/technical-documentation-page">Technical Documentation Page</a></li>
+      <li><a href="/personal-portfolio-webpage">Personal Portfolio Webpage</a></li>
+    </ul>
+    <br />
+    <h3>Front End Development Libraries</h3>
+    <ul>
+      <li><a href="/random-quote-machine">Random Quote Machine</a></li>
+      <li><a href="/markdown-previewer">Markdown Previewer</a></li>
+      <li><a href="/drum-machine">Drum Machine</a></li>
+      <li><a href="/javascript-calculator">JavaScript Calculator</a></li>
+      <li><a href="/25-5-clock">25 + 5 Clock</a></li>
+    </ul>
+    <br />
+    <h3>APIs and Microservices</h3>
     <ul>
       <li><a href="/timestamp">Timestamp Microservice</a></li>
-      <li><a href="/header-parser">Request Header Parser</a></li>
+      <li><a href="/request-header-parser">Request Header Parser</a></li>
       <li><a href="/url-shortener">URL Shortener</a></li>
       <li><a href="/exercise-tracker">Exercise Tracker</a></li>
       <li><a href="/file-metadata">File Metadata</a></li>
+    </ul>
+    <br />
+    <h3>Quality Assurance</h3>
+    <ul>
+      <li><a href="/metric-imperial-converter">Metric-Imperial Converter</a></li>
+      <li><a href="/issue-tracker">Issue Tracker</a></li>
+      <li><a href="/personal-library">Personal Library</a></li>
+      <li><a href="/sudoku-solver">Sudoku Solver</a></li>
+      <li><a href="/american-british-translator">American British Translator</a></li>
     </ul>
   </body>
 </html>
