--- a/views/front-end-development-libraries/random-quote-machine.html
+++ b/views/front-end-development-libraries/random-quote-machine.html
@@ -110,6 +110,7 @@
         );
       }
       handleSubmit(e) {
+        e.preventDefault();
         this.setState(state => (randQuote()));
       }
     }
