--- a/views/front-end-development-libraries/25-5-clock.html
+++ b/views/front-end-development-libraries/25-5-clock.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>25 + 5 Clock</title>
-  </head>
-  <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://unpkg.com/react@16.4.0/umd/react.production.min.js" type="text/javascript"></script>
+  <script src="https://unpkg.com/react-dom@16.4.0/umd/react-dom.production.min.js" type="text/javascript"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <title>25+5 Clock</title>
+</head>
+<body>
+  <div id="root"></div>
+  
+  <script type="text/babel">
+    const MdComponent = (props) => {
+      return (
+        <div>
+          <p>Hello React!</p>
+        </div>
+      );
+    }
+
+    ReactDOM.render(<MdComponent />, document.getElementById('root'));
+  </script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+</body>
 </html>
