Developed Drum Machine

--- a/views/front-end-development-libraries/markdown-previewer.html
+++ b/views/front-end-development-libraries/markdown-previewer.html
@@ -42,9 +42,7 @@ const greater = (name) {
 - item
 > A Block Quote
 ![an image](https://commonmark.org/help/images/favicon.png)
-**bolded text**
-`
-
+**bolded text**`;
       function App() {
         const [text, setText] = React.useState(defText);
         return (
