--- a/views/front-end-development-libraries/drum-machine.html
+++ b/views/front-end-development-libraries/drum-machine.html
@@ -1,28 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://unpkg.com/react@16.4.0/umd/react.production.min.js" type="text/javascript"></script>
-  <script src="https://unpkg.com/react-dom@16.4.0/umd/react-dom.production.min.js" type="text/javascript"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <title>Drum Machine</title>
-</head>
-<body>
-  <div id="root"></div>
-  
-  <script type="text/babel">
-    const MdComponent = (props) => {
-      return (
-        <div>
-          <p>Hello React!</p>
-        </div>
-      );
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://unpkg.com/react@16.4.0/umd/react.production.min.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@16.4.0/umd/react-dom.production.min.js"
+      type="text/javascript"
+    ></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <title>Drum Machine</title>
+  </head>
+  <body>
+    <div id="drum-machine"></div>
 
-    ReactDOM.render(<MdComponent />, document.getElementById('root'));
-  </script>
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-</body>
+    <script type="text/babel">
+      const App = (props) => {
+        const { useState, useEffect } = React;
+
+        const SOUNDS = [
+          {
+            Q: "https://s3.amazonaws.com/freecodecamp/drums/RP4_KICK_1.mp3",
+            KC: 81,
+            des: "RP4_KICK_1",
+          },
+          {
+            W: "https://s3.amazonaws.com/freecodecamp/drums/Brk_Snr.mp3",
+            KC: 87,
+            des: "Brk_Snr",
+          },
+          {
+            E: "https://s3.amazonaws.com/freecodecamp/drums/Cev_H2.mp3",
+            KC: 69,
+            des: "Cev_H2",
+          },
+          {
+            A: "https://s3.amazonaws.com/freecodecamp/drums/Bld_H1.mp3",
+            KC: 65,
+            des: "Bld_H1",
+          },
+          {
+            S: "https://s3.amazonaws.com/freecodecamp/drums/Heater-3.mp3",
+            KC: 83,
+            des: "Heater-3",
+          },
+          {
+            D: "https://s3.amazonaws.com/freecodecamp/drums/side_stick_1.mp3",
+            KC: 68,
+          },
+          {
+            Z: "https://s3.amazonaws.com/freecodecamp/drums/Heater-4_1.mp3",
+            KC: 90,
+            des: "side_stick_1",
+          },
+          {
+            X: "https://s3.amazonaws.com/freecodecamp/drums/Heater-2.mp3",
+            KC: 88,
+            des: "Heater-2",
+          },
+          {
+            C: "https://s3.amazonaws.com/freecodecamp/drums/Heater-1.mp3",
+            KC: 67,
+            des: "Heater-1",
+          },
+        ];
+
+        document.addEventListener("keyup", (e) => {
+          if (
+            SOUNDS.map((s) => [
+              Object.keys(s)[0],
+              Object.keys(s)[0].toLowerCase(),
+            ])
+              .flat()
+              .includes(e.key)
+          ) {
+            document.getElementById(e.key).click();
+          }
+        });
+
+        document.addEventListener("click", (e) => {
+          if (e.target.className === "drum-pad") {
+            document.getElementById("display").innerHTML =
+              SOUNDS[
+                SOUNDS.map((s) => Object.keys(s)[0].toLowerCase()).indexOf(
+                  e.target.id
+                )
+              ]["des"];
+          }
+        });
+
+        return (
+          <div>
+            <div id="drum-keys">
+              {SOUNDS.map((sound) => (
+                <button
+                  id={Object.keys(sound)[0].toLowerCase()}
+                  className="drum-pad"
+                  onClick={() =>
+                    document.getElementById(Object.keys(sound)[0]).play()
+                  }
+                >
+                  {Object.keys(sound)[0]}
+                  <audio
+                    id={Object.keys(sound)[0]}
+                    src={Object.values(sound)[0]}
+                    className="clip"
+                  />
+                </button>
+              ))}
+            </div>
+            <div id="display">{}</div>
+          </div>
+        );
+      };
+      ReactDOM.render(<App />, document.getElementById("drum-machine"));
+    </script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  </body>
 </html>
