js colculator and drum machine something

--- a/views/front-end-development-libraries/drum-machine.html
+++ b/views/front-end-development-libraries/drum-machine.html
@@ -51,11 +51,12 @@
           {
             D: "https://s3.amazonaws.com/freecodecamp/drums/side_stick_1.mp3",
             KC: 68,
+            des: "side_stick_1",
           },
           {
             Z: "https://s3.amazonaws.com/freecodecamp/drums/Heater-4_1.mp3",
             KC: 90,
-            des: "side_stick_1",
+            des: "Heater-4_1",
           },
           {
             X: "https://s3.amazonaws.com/freecodecamp/drums/Heater-2.mp3",
